<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include layout="@layout/toolbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/portfolio_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/double_activity_vertical_margin"
                android:text="@string/portfolio_title"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_project_one"
                android:layout_width="240dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/project_one"
                android:theme="@style/ProjectButtonTheme.Base"
                android:onClick="sendMessage"/>

            <Button
                android:id="@+id/btn_project_two"
                android:layout_width="240dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/project_two"
                android:theme="@style/ProjectButtonTheme.Base" />

            <Button
                android:id="@+id/btn_project_three"
                android:layout_width="240dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/project_three"
                android:theme="@style/ProjectButtonTheme.Base" />

            <Button
                android:id="@+id/btn_project_four"
                android:layout_width="240dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/project_four"
                android:theme="@style/ProjectButtonTheme.Base" />

            <Button
                android:id="@+id/btn_project_five"
                android:layout_width="240dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/project_five"
                android:theme="@style/ProjectButtonTheme.Base" />

            <Button
                android:id="@+id/btn_project_six"
                android:layout_width="240dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/project_six"
                android:theme="@style/ProjectButtonTheme.Highlight" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>